reg flow with smtp
